@@ -1,6 +1,10 @@
 # Bank-card-encryption-with-multi-threaded-server
 Mini project for university, which encrypt, decrypt and validate bank cards with JavaFx
 
+To start correctly this app, you must install javaFx on your machine,
+then add VM options and --module-path \openjfx-19_windows-x64_bin-sdk\javafx-sdk-19\lib --add-modules javafx.controls,javafx.fxml
+where \openjfx-19_windows-x64_bin-sdk\javafx-sdk-19\lib is path to lib folder in javaFx which you install
+
 ![image](https://user-images.githubusercontent.com/80620561/215750806-9eb1df8f-b9ce-407a-907f-afcd280f7513.png)
 ![image](https://user-images.githubusercontent.com/80620561/215750898-bc09e603-fd9c-48e4-8bb8-75dd3c390b07.png)
 ![image](https://user-images.githubusercontent.com/80620561/215751019-2bad1fe4-a0f6-4463-8bf9-31dafd809c47.png)
